@@ -1,3 +1,7 @@
+2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* bundled-packages/README: Document restriction on --with-late-packages.
+
 2007-12-23  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* bundled-packages/README: Documentation for bundled packages.
