@@ -1,6 +1,11 @@
 2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>
 
+	* Makefile.in.in (mkpkgdir): Ensure only one late package directory.
+
+2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>
+
 	* Makefile.in.in (check-available-packages): Say where to install.
+	(mkpkgdir): 
 
 2007-12-23  Stephen J. Turnbull  <stephen@xemacs.org>
 
